--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -23,6 +23,11 @@
   --padding-1: 1.2rem;
 
   --box-shadow: 0 2rem 3rem var(--color-light);
+
+  --ff-body: "Inter", sans-serif;
+  --ff-heading: "myfont", sans-serif;
+
+
 }
 
 /* DARK THEME VARAIBLES */
@@ -33,6 +38,11 @@
   --color-dark-variant: #a3bdcc;
   --color-light: rgba(0, 0, 0, 0.4);
   --box-shadow: 0 2rem 3rem var(--color-light);
+}
+
+@font-face {
+  font-family: "myfont";
+  src: url('../font/wulkan-display-2-0-font/Wulkan-Display-Medium.otf') format('woff');
 }
 
 
@@ -51,7 +61,7 @@
 body {
   width: 100vw;
   height: 100vh;
-  font-family: 'Inter', sans-serif;
+  font-family: var(--ff-body);
   font-size: 0.875rem;
   background: var(--color-background);
   user-select: none;
@@ -64,7 +74,7 @@ body {
   width: 96%;
   margin: 0 auto;
   gap: 1.8rem;
-  grid-template-columns: 14rem auto 23rem;
+  grid-template-columns: 14rem auto;
 }
 
 /* General Styles */
@@ -170,6 +180,11 @@ aside .logo img {
   height: 2rem;
 }
 
+aside .logo h2 {
+  font-family: var(--ff-heading);
+  font-weight: 600;
+}
+
 aside .close {
   display: none;
 }
@@ -239,33 +254,24 @@ aside .sidebar a:hover span {
 
 /* ============= MAIN ================= */
 
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+}
+
 main {
   margin-top: 1.4rem;
+
 }
 
-
-main .date {
-  display: inline-block;
-  background-color: var(--color-light);
-  border-radius: var(--border-radius-1);
-  margin-top: 1rem;
-  padding: 0.5rem 1.6rem;
-}
-
-main .date input[type='date'] {
-  background: transparent;
-  color: var(--color-dark);
-  font-family: 'Inter', sans-serif;
-}
-
-main .insights {
+main .charts {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1.6rem;
 }
 
-
-main .insights>div {
+main .charts>div {
   background: var(--color-white);
   padding: var(--card-padding);
   border-radius: var(--card-border-radius);
@@ -275,120 +281,27 @@ main .insights>div {
 }
 
 
-main .insights>div:hover {
+main .charts>div:hover {
   box-shadow: none;
 }
 
-main .insights>div span {
-  background: var(--color-primary);
-  padding: 0.5rem;
-  border-radius: 50%;
-  color: var(--color-white);
-  font-size: 2rem;
-}
+/* =====  Right ======= */
 
-main .insights>div.expenses span {
-  background: var(--color-danger);
-}
-
-main .insights>div.income span {
-  background: var(--color-success);
-}
-
-main .insights>div .middle {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-}
-
-main .insights h3 {
-  margin: 1rem 0 0 0.6rem;
-  font-size: 1rem;
-}
-
-main .insights .progress {
-  position: relative;
-  width: 92px;
-  height: 92px;
-  border-radius: 50%;
-}
-
-main .insights svg {
-  height: 7rem;
-  width: 7rem;
-}
-
-main .insights svg circle {
-  fill: none;
-  stroke: var(--color-primary);
-  stroke-width: 14;
-  stroke-linecap: round;
-  transform: translate(5px, 5px);
-  stroke-dasharray: 110;
-  stroke-dashoffset: 92;
-}
-
-main .insights .sales svg circle {
-  stroke-dashoffset: -30;
-  stroke-dasharray: 200;
-
-}
-
-main .insights .expenses svg circle {
-  stroke-dashoffset: 20;
-  stroke-dasharray: 80;
-}
-
-main .insights .income svg circle {
-  stroke-dashoffset: 35;
-  stroke-dasharray: 100;
-}
-
-main .insights .progress .number {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-main .insights small {
-  margin-top: 1.6rem;
-  display: block;
-}
-
-/* =========== Analytics ============== */
-
-main .analytics {
-  margin-top: 2em;
-}
-
-main .analytics h2 {
-  margin-bottom: 0.8rem;
-}
-
-
-/* =====  Right======= */
-
-.right {
+.dashboard__right {
   margin-top: 1.4rem;
 }
 
-.right .top {
+.dashboard__right .top {
   display: flex;
   justify-content: end;
   gap: 2em;
 }
 
-.right .top button {
+.dashboard__right .top button {
   display: none;
 }
 
-.right .theme-toggler {
+.dashboard__right .theme-toggler {
   background: var(--color-light);
   display: flex;
   justify-content: space-between;
@@ -399,7 +312,7 @@ main .analytics h2 {
   border-radius: var(--border-radius-1);
 }
 
-.right .theme-toggler span {
+.dashboard__right .theme-toggler span {
   font-size: 1.2rem;
   width: 50%;
   height: 100%;
@@ -408,115 +321,35 @@ main .analytics h2 {
   justify-content: center;
 }
 
-.right .theme-toggler span.active {
+.dashboard__right .theme-toggler span.active {
   background: var(--color-primary);
   color: white;
   border-radius: var(--border-radius-1);
 }
 
-
-.right .top .profile {
+.dashboard__right .top .profile {
   display: flex;
   gap: 2rem;
   text-align: right;
 }
 
-
-/* Recent Updates */
-.right .theme-toggler span.active {
+.dashboard__right .theme-toggler span.active {
   background: var(--color-primary);
   color: white;
   border-radius: var(--border-radius-1);
 }
 
-.right .top .profile {
+.dashboard__right .top .profile {
   display: flex;
   gap: 2rem;
   text-align: right;
 }
-
-/* RECENT UPDATES */
-.right .recent-updates {
-  margin-top: 1rem;
-}
-
-.right .recent-updates h2 {
-  margin-bottom: 0.8rem;
-}
-
-.right .recent-updates .updates {
-  background: var(--color-white);
-  padding: var(--card-padding);
-  border-radius: var(--card-border-radius);
-  box-shadow: var(--box-shadow);
-  transition: all 300ms ease;
-}
-
-
-.right .recent-updates .updates:hover {
-  box-shadow: none;
-}
-
-.right .recent-updates .updates .update {
-  display: grid;
-  grid-template-columns: 2.6rem auto;
-  gap: 1rem;
-  margin-bottom: 1rem;
-}
-
-/* SALE ANALYTICS */
-
-
-.right .sales-analytics {
-  margin-top: 2rem;
-}
-
-
-.right .sales-analytics h2 {
-  margin-bottom: 1rem;
-}
-
-.right .sales-analytics .item {
-  background: var(--color-white);
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  margin-bottom: 0.7rem;
-  padding: 1.4rem var(--card-padding);
-  border-radius: var(--border-radius-3);
-  box-shadow: var(--box-shadow);
-  transition: all 300ms ease;
-}
-
-.right .sales-analytics .item .right {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  margin: 0;
-  width: 100%;
-}
-
-.right .sales-analytics .item .icon {
-  padding: 0.6rem;
-  color: var(--color-white);
-  border-radius: 50%;
-  background: var(--color-primary);
-}
-
-.right .sales-analytics .item.online .icon {
-  background: var(--color-danger);
-}
-
-.right .sales-analytics .item.customers .icon {
-  background: var(--color-success);
-}
-
 
 /* ==========  Media queries ================= */
 @media (max-width: 1200px) {
   .container {
     width: 94%;
-    grid-template-columns: 7rem auto 23rem;
+    grid-template-columns: 7rem auto;
   }
 
   aside .logo h2,
@@ -537,7 +370,7 @@ main .analytics h2 {
     margin-top: 1.8rem;
   }
 
-  main .insights {
+  main .charts {
     grid-template-columns: 1fr;
     gap: 0;
   }
@@ -556,7 +389,11 @@ main .analytics h2 {
 @media (min-width: 769px) and (max-width: 1199px) {
   .container {
     width: 94%;
-    grid-template-columns: 7rem auto 23rem;
+    grid-template-columns: 7rem auto;
+  }
+
+  aside .logo {
+    margin-left: 2rem;
   }
 
   aside .logo h2,
@@ -573,8 +410,8 @@ main .analytics h2 {
     margin-top: 1.8rem;
   }
 
-  main .insights {
-    grid-template-columns: 1fr;
+  main .charts {
+    grid-template-columns: 1fr 1fr;
     gap: 1em;
   }
 
@@ -590,6 +427,11 @@ main .analytics h2 {
 /* Apply styles to the page when the page is viewed on a device with a
 screen width of 768px or less. */
 @media (max-width: 768px) {
+
+  .charts {
+    grid-template-columns: 1fr !important;
+  }
+
   .container {
     width: 100%;
     grid-template-columns: 1fr;
@@ -646,20 +488,12 @@ screen width of 768px or less. */
 
   }
 
-  main .analytics {
-    position: relative;
-    margin: 3rem 0 0 0;
+  .dashboard__right {
     width: 100%;
 
-
   }
 
-  .right {
-    width: 94%;
-    margin: 0 auto 4rem;
-  }
-
-  .right .top {
+  .dashboard__right .top {
     position: fixed;
     top: 0;
     left: 0;
@@ -673,17 +507,17 @@ screen width of 768px or less. */
     box-shadow: 0 1rem 1rem var(--color-light);
   }
 
-  .right .top .theme-toggler {
+  .dashboard__right .top .theme-toggler {
     width: 4.4rem;
     position: absolute;
     left: 66%;
   }
 
-  .right .profile .info {
+  .dashboard__right .profile .info {
     display: none;
   }
 
-  .right .top button {
+  .dashboard__right .top button {
     display: inline-block;
     background-color: transparent;
     cursor: pointer;
@@ -692,7 +526,17 @@ screen width of 768px or less. */
     left: 1rem;
   }
 
-  .right .top button span {
+  .dashboard__right .top button span {
     font-size: 2rem;
   }
 }
+
+/* =============== Analytics  ==================== */
+
+
+@media (max-width: 768px) {}
+
+
+@media (min-width: 768px) and (max-width: 979px) {}
+
+@media (min-width: 980px) {}
